# graduation_proj

./: README.md
bot_nav/: CMakeLists.txt
bot_nav/config/: amcl_config.yaml  bt_navigator.yaml  controller.yaml  planner_server.yaml  warehouse_map.pgm  warehouse_map.yaml
bot_nav/launch/: localization.launch.py  mapping.launch.py  navigation.launch.py
bot_nav/params/: nav2_params.yaml
bot_nav/rviz/: nav.rviz
diff_bot/: CMakeLists.txt  package.xml
diff_bot/config/: diff_drive_controllel.yaml
diff_bot/launch/: robot.launch.py  rsp.launch.py  simulation.launch.py  simulationlaunch.py
diff_bot/rviz/: show_robot.rviz
diff_bot/test/: test.urdf
diff_bot/urdf/: camera.xacro  caster_wheel.xacro  chassis.xacro  control.xacro  gazebo_control.xacro  inertial_macros.xacro  lidar.xacro  properties.xacro  robot.urdf  robot.urdf.xacro  wheels.xacro
diff_bot/worlds/: sim_world.world  warehouse.world
diff_bot/worlds/my_env/: model.config  model.sdf
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/bot_nav/share/bot_nav/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/diff_bot/lib/diff_bot/: cmd_vel_mapper
install/diff_bot/share/diff_bot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  (+5 more)
install/rplidar_ros/include/: rplidar_node.hpp  visibility.h
log/: latest_build
robo_pose/: CMakeLists.txt  package.xml
robo_pose/launch/: motor_control.launch.py
robo_pose/src/: motor_control.cpp
(+112 files in other folders)
