<package format="2">
  <name>robo_pose</name>
  <version>0.0.0</version>
  <description>My Robot Package</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>wiringPi</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>wiringPi</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
